# rvm

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: nightly.yml
benches/: Cargo.toml
benches/benches/: gpu_bench.rs  rvm_bench.rs
crates/rvm-gpu/: Cargo.toml
crates/rvm-gpu/src/: accel.rs  budget.rs  buffer.rs  context.rs  device.rs  error.rs  kernel.rs  lib.rs  queue.rs  tests.rs
crates/rvm-kernel/: Cargo.toml
crates/rvm-memory/: Cargo.toml
crates/rvm-proof/: Cargo.toml
crates/rvm-sched/: Cargo.toml
crates/rvm-wasm/: Cargo.toml
crates/rvm-witness/: Cargo.toml
docs/: RUVECTOR-INTEGRATION.md
docs/adr/: ADR-132-ruvix-hypervisor-core.md  ADR-133-partition-object-model.md  ADR-134-witness-schema-log-format.md  ADR-135-proof-verifier-design.md  ADR-136-memory-hierarchy-reconstruction.md  ADR-137-bare-metal-boot-sequence.md  ADR-138-seed-hardware-profile.md  ADR-139-appliance-deployment-model.md  ADR-140-agent-runtime-adapter.md  ADR-141-coherence-engine-integration.md  ADR-143-nightly-verified-release-pipeline.md  ADR-144-gpu-compute-support.md  (+10 more)
scripts/: analyze-discoveries.sh  benchmark-regression-check.sh  check-claude-release.sh  generate-release-notes.sh
tests/: Cargo.toml  README.md
userguide/: 01-quickstart.md  02-core-concepts.md  03-architecture.md  04-crate-reference.md  05-capabilities-proofs.md  06-witness-audit.md  07-partitions-scheduling.md  08-memory-model.md  09-wasm-agents.md  10-security.md  11-performance.md  12-bare-metal.md  13-advanced-exotic.md  14-troubleshooting.md  15-glossary.md  README.md  cross-reference.md
(+63 files in other folders)
